--- a/TEST.ioc
+++ b/TEST.ioc
@@ -4,35 +4,9 @@ CORTEX_M7.CPU_ICache=Disabled
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
 CRC.IPParameters=InputDataFormat
 CRC.InputDataFormat=CRC_INPUTDATA_FORMAT_WORDS
-Dma.Request0=USART3_RX
-Dma.Request1=USART3_TX
-Dma.RequestsNb=2
-Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_RX.0.Instance=DMA1_Stream1
-Dma.USART3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART3_RX.0.Mode=DMA_NORMAL
-Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_TX.1.Instance=DMA1_Stream3
-Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.1.Mode=DMA_NORMAL
-Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PhyAddress=0
-FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,128,StartTask02,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 I2C2.IPParameters=Timing
 I2C2.Timing=0x20404768
@@ -40,17 +14,16 @@ KeepUserPlacement=true
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=CRC
-Mcu.IP10=USART3
-Mcu.IP11=WWDG
-Mcu.IP2=DMA
-Mcu.IP3=ETH
-Mcu.IP4=FREERTOS
-Mcu.IP5=GFXSIMULATOR
-Mcu.IP6=I2C2
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=12
+Mcu.IP10=WWDG
+Mcu.IP2=ETH
+Mcu.IP3=I2C2
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM6
+Mcu.IP8=TIM7
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -78,43 +51,45 @@ Mcu.Pin28=PB3
 Mcu.Pin29=PB7
 Mcu.Pin3=PF0
 Mcu.Pin30=VP_CRC_VS_CRC
-Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin32=VP_SYS_VS_tim1
-Mcu.Pin33=VP_WWDG_VS_WWDG
+Mcu.Pin31=VP_SYS_VS_tim1
+Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM7_VS_OPM
+Mcu.Pin35=VP_WWDG_VS_WWDG
 Mcu.Pin4=PF1
 Mcu.Pin5=PH0/OSC_IN
 Mcu.Pin6=PH1/OSC_OUT
 Mcu.Pin7=PC1
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=34
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
-MxCube.Version=5.1.0
-MxDb.Version=DB.5.0.10
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.ETH_WKUP_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.FLASH_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.I2C2_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.I2C2_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
+MxCube.Version=5.2.0
+MxDb.Version=DB.5.0.20
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.ETH_WKUP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.FLASH_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.I2C2_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.WWDG_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.WWDG_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
 PA1.Locked=true
@@ -275,7 +250,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_WWDG_Init-WWDG-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true,10-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_WWDG_Init-WWDG-false-HAL-true,7-MX_ETH_Init-ETH-false-HAL-true,8-SystemClock_Config-RCC-false-HAL-false,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -365,14 +340,26 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+TIM6.IPParameters=TIM_MasterOutputTrigger,Period,Prescaler
+TIM6.Period=2000
+TIM6.Prescaler=53999
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM7.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
+TIM7.Period=330
+TIM7.Prescaler=107
+TIM7.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
-VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
-VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
+VP_TIM7_VS_OPM.Mode=OPM_bit
+VP_TIM7_VS_OPM.Signal=TIM7_VS_OPM
 VP_WWDG_VS_WWDG.Mode=WWDG_Activate
 VP_WWDG_VS_WWDG.Signal=WWDG_VS_WWDG
 WWDG.Counter=127
