--- a/TEST.ioc
+++ b/TEST.ioc
@@ -250,7 +250,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_WWDG_Init-WWDG-false-HAL-true,7-MX_ETH_Init-ETH-false-HAL-true,8-SystemClock_Config-RCC-false-HAL-false,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ETH_Init-ETH-false-HAL-true,7-SystemClock_Config-RCC-false-HAL-false,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
