--- a/TEST.ioc
+++ b/TEST.ioc
@@ -7,6 +7,9 @@ CRC.InputDataFormat=CRC_INPUTDATA_FORMAT_WORDS
 ETH.IPParameters=MediaInterface,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PhyAddress=0
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,256,StartTask02,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 I2C2.IPParameters=Timing
 I2C2.Timing=0x20404768
@@ -14,16 +17,17 @@ KeepUserPlacement=true
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=CRC
-Mcu.IP10=WWDG
+Mcu.IP10=USART3
+Mcu.IP11=WWDG
 Mcu.IP2=ETH
-Mcu.IP3=I2C2
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM6
-Mcu.IP8=TIM7
-Mcu.IP9=USART3
-Mcu.IPNb=11
+Mcu.IP3=FREERTOS
+Mcu.IP4=I2C2
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM6
+Mcu.IP9=TIM7
+Mcu.IPNb=12
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -51,45 +55,46 @@ Mcu.Pin28=PB3
 Mcu.Pin29=PB7
 Mcu.Pin3=PF0
 Mcu.Pin30=VP_CRC_VS_CRC
-Mcu.Pin31=VP_SYS_VS_tim1
-Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM7_VS_OPM
-Mcu.Pin35=VP_WWDG_VS_WWDG
+Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin32=VP_SYS_VS_tim1
+Mcu.Pin33=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM7_VS_OPM
+Mcu.Pin36=VP_WWDG_VS_WWDG
 Mcu.Pin4=PF1
 Mcu.Pin5=PH0/OSC_IN
 Mcu.Pin6=PH1/OSC_OUT
 Mcu.Pin7=PC1
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=36
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
 MxCube.Version=5.2.1
 MxDb.Version=DB.5.0.21
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.ETH_WKUP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.FLASH_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.I2C2_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.I2C2_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.ETH_WKUP_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.FLASH_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.I2C2_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C2_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.WWDG_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.WWDG_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
 PA1.Locked=true
@@ -250,7 +255,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ETH_Init-ETH-false-HAL-true,7-SystemClock_Config-RCC-false-HAL-false,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ETH_Init-ETH-false-HAL-true,7-SystemClock_Config-RCC-false-HAL-false,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM7_Init-TIM7-false-HAL-true,10-MX_WWDG_Init-WWDG-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -352,6 +357,8 @@ USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
