--- a/TEST.ioc
+++ b/TEST.ioc
@@ -9,25 +9,28 @@ ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PhyAddress=0
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,160,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,180,StartTask02,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 I2C2.IPParameters=Timing
 I2C2.Timing=0x20404768
 KeepUserPlacement=true
+LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=CRC
-Mcu.IP10=USART3
-Mcu.IP11=WWDG
+Mcu.IP10=TIM6
+Mcu.IP11=TIM7
+Mcu.IP12=USART3
+Mcu.IP13=WWDG
 Mcu.IP2=ETH
 Mcu.IP3=FREERTOS
 Mcu.IP4=I2C2
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TIM6
-Mcu.IP9=TIM7
-Mcu.IPNb=12
+Mcu.IP5=LWIP
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=RTC
+Mcu.IP9=SYS
+Mcu.IPNb=14
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -56,18 +59,21 @@ Mcu.Pin29=PB7
 Mcu.Pin3=PF0
 Mcu.Pin30=VP_CRC_VS_CRC
 Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin32=VP_SYS_VS_tim1
-Mcu.Pin33=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM7_VS_OPM
-Mcu.Pin36=VP_WWDG_VS_WWDG
+Mcu.Pin32=VP_LWIP_VS_Enabled
+Mcu.Pin33=VP_RTC_VS_RTC_Activate
+Mcu.Pin34=VP_RTC_VS_RTC_Calendar
+Mcu.Pin35=VP_SYS_VS_tim1
+Mcu.Pin36=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM7_VS_OPM
+Mcu.Pin39=VP_WWDG_VS_WWDG
 Mcu.Pin4=PF1
 Mcu.Pin5=PH0/OSC_IN
 Mcu.Pin6=PH1/OSC_OUT
 Mcu.Pin7=PC1
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=37
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -75,6 +81,7 @@ MxCube.Version=5.2.1
 MxDb.Version=DB.5.0.21
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ETH_WKUP_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.FLASH_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
@@ -255,7 +262,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_ETH_Init-ETH-false-HAL-true,6-SystemClock_Config-RCC-false-HAL-false,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_TIM7_Init-TIM7-false-HAL-true,9-MX_WWDG_Init-WWDG-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-SystemClock_Config-RCC-false-HAL-false,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_WWDG_Init-WWDG-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true,11-MX_ETH_Init-ETH-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -343,6 +350,9 @@ RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=384000000
 RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
+RTC.IPParameters=Month,WeekDay
+RTC.Month=RTC_MONTH_JUNE
+RTC.WeekDay=RTC_WEEKDAY_FRIDAY
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 TIM6.IPParameters=TIM_MasterOutputTrigger,Period,Prescaler
@@ -359,6 +369,12 @@ VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_LWIP_VS_Enabled.Mode=Enabled
+VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
